docs: removed references to old pre-lerna package names

--- a/docs/packages/rxstats/operators/f1.md
+++ b/docs/packages/rxstats/operators/f1.md
@@ -9,7 +9,7 @@ Given an `Observable` of ground-truth labels and predictions, the f1 operator re
 ```javascript
 import { from } from 'rxjs';
 import { skip } from 'rxjs/operators';
-import { f1 } from '@buccaneer/rxjs-stats';
+import { f1 } from '@bottlenose/rxstats';
 
 const items = [
   [0, 1], // [trueLabel, predictedLabel]
